--- a/project2.html
+++ b/project2.html
@@ -542,7 +542,18 @@ def convolve2d_with_2_loops(image, kernel):
 
         <h3>Favorite Result: Complete Frequency Analysis</h3>
         <p>For my favorite hybrid result, I provide comprehensive frequency analysis by plotting the log-magnitude Fourier spectra of each processing stage. This includes the two input images, the filtered images (low-pass and high-pass components), and the final hybrid result:</p>
-
+        <div class="result-item">
+            <img src="DerekPicture.png" alt=" ">
+            <div class="result-caption">result</div>
+        </div>
+        <div class="result-item">
+            <img src="nutmeg.png" alt=" ">
+            <div class="result-caption">result</div>
+        </div>
+         <div class="result-item">
+            <img src="hybrid_hgfhg.jpg" alt=" ">
+            <div class="result-caption">result</div>
+        </div>
         
         <div class="full-width-image">
             <img src="Figure_99.png" alt="Complete frequency analysis">
