--- a/project2.html
+++ b/project2.html
@@ -694,9 +694,8 @@ def convolve2d_with_2_loops(image, kernel):
             <br>• <strong>Color enhancement:</strong> Full RGB processing with per-channel smoothing maintains color richness
         </div>
 
-        <h2>Analysis and Discussion</h2>
+        <h2>Important things I have learnt</h2>
         
-        <h3>Frequency Domain Insights</h3>
-        <p>The multiresolution approach succeeds because it addresses the fundamental challenge of blending: different spatial frequencies require different transition strategies. High frequencies need sharp transitions to preserve detail, while low frequencies benefit from gradual blending to avoid visible seams.</p>
+        <p>this project showed me how human perception can be manipulated through careful frequency engineering. The distance-dependent perception of hybrid images demonstrates that effective computer vision must consider not just mathematical correctness but perceptual plausibility. The multi-resolution blending results proved that frequency-aware processing can achieve seamless integration that simple alpha blending cannot match.</p>
         
         <h3
