--- a/project2.html
+++ b/project2.html
@@ -639,6 +639,8 @@ def convolve2d_with_2_loops(image, kernel):
             <div class="result-caption">Complete Blending Process: Laplacian stacks, mask stack, and blended result (Figure 10 style)</div>
         </div>
 
+        <h4>Starting from the top, the layers show the apple and orange after the binary mask has been applied. With each step, the images appear progressively blurrier, which is expected. What really matters, however, is that this blurring is created through Gaussian and Laplacian stacks. These techniques allow the two fruits to be blended together seamlessly, producing a final image that looks smooth and natural despite their differences.</h4>
+
         <h3>Custom Blending Examples</h3>
 
         <h4>Example 1: Cat + Tiger (Circular Mask)</h4>
