--- a/project3.html
+++ b/project3.html
@@ -701,7 +701,7 @@ H = [<br>
 
     <div class="image-grid">
         <div class="image-pair">
-            <img src="features_matches.png" alt="Feature matches - first pair">
+            <img src="feature_matches.png" alt="Feature matches - first pair">
             <div class="image-caption">Feature Matching: First Image Pair<br>Matched keypoints after ratio test (threshold = 0.8)</div>
         </div>
         <div class="image-pair">
